--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap -mx-2 pb-48">
+<div class="flex flex-wrap -mx-2">
   <div
     *ngFor="let x of barOrDrink"
     class="w-1/3 px-2 rounded overflow-hidden my-2"
