--- a/src/app/components/admin/bar/add-bar/add-bar.component.html
+++ b/src/app/components/admin/bar/add-bar/add-bar.component.html
@@ -6,7 +6,7 @@
 
 <app-admin-header></app-admin-header>
 
-<div *ngIf="!loading" class="pb-32">
+<div *ngIf="!loading">
   <div
     class="h-20 w-full flex justify-center items-center"
     style="font-family: 'Open Sans', sans-serif;"
@@ -498,27 +498,55 @@
             </div>
 
             <div formArrayName="phone" class="width-full">
-                <div *ngFor="let group of PhoneArray.controls; let i = index;" [formGroupName]="i" class="width-full">
-                    <div class="md:flex md:items-center mb-6">
-                        <div class="md:w-1/5">
-                            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                                Número de teléfono
-                            </label>
-                        </div>
-                        <div class="md:w-2/5">
-                            <input formControlName="phone" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" id="inline-full-name" type="text" placeholder="Ej. 02123451234">
-                        </div>
-                        <div class="flex space-x-4 justify-end md:w-2/5">
-                            <button  *ngIf="i<4" (click)="addPhone()" class="md:w-1/3 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                                +
-                            </button>
-                            <button *ngIf="i!=0" (click)="deletePhone(i)" class="md:w-1/3 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                                -
-                            </button>
-                        </div>
-                    </div>
-                    <app-required-field *ngIf="group.controls.phone.invalid && group.controls.phone.touched" [text]="'Este campo es requerido.'"></app-required-field>
-                </div> 
+              <div
+                *ngFor="let group of PhoneArray.controls; let i = index"
+                [formGroupName]="i"
+                class="width-full"
+              >
+                <div class="md:flex md:items-center mb-6">
+                  <div class="md:w-1/5">
+                    <label
+                      class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                      for="inline-full-name"
+                    >
+                      Número de teléfono
+                    </label>
+                  </div>
+                  <div class="md:w-2/5">
+                    <input
+                      formControlName="phone"
+                      class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                      id="inline-full-name"
+                      type="text"
+                      placeholder="Ej. 02123451234"
+                    />
+                  </div>
+                  <div class="flex space-x-4 justify-end md:w-2/5">
+                    <button
+                      *ngIf="i < 4"
+                      (click)="addPhone()"
+                      class="md:w-1/3 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                      type="button"
+                    >
+                      +
+                    </button>
+                    <button
+                      *ngIf="i != 0"
+                      (click)="deletePhone(i)"
+                      class="md:w-1/3 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                      type="button"
+                    >
+                      -
+                    </button>
+                  </div>
+                </div>
+                <app-required-field
+                  *ngIf="
+                    group.controls.phone.invalid && group.controls.phone.touched
+                  "
+                  [text]="'Este campo es requerido.'"
+                ></app-required-field>
+              </div>
             </div>
           </div>
         </div>
@@ -592,65 +620,88 @@
         </div>
       </div>
 
-  
-
-
-             <div class="width-full">
-                <div *ngFor="let group of photo; let i = index;" class="width-full">
-                    <div class="md:flex md:items-center mb-6">
-
-                        <div class="md:w-1/5">
-                            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-                                Foto
-                            </label>
-                        </div>
-
-                        <div class="md:w-4/5">
-
-                            <div *ngIf="group=='null'" class="flex items-center justify-center bg-grey-lighter">
-                                <label class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide  border border-blue cursor-pointer hover:bg-orange-500 hover:text-white">   
-                                    <span class="mt-2 text-base leading-normal">Selecciona un archivo</span>
-                                    <lib-file-upload-firestorage storagePath="bar" (res)="uploadPhoto($event, i)" class="hidden">
-                                    </lib-file-upload-firestorage>
-                                </label>
-                            </div>
-
-                            <div *ngIf="group!='null'" class="width-full bg-grey-lighter">
-                                <div class="width-2/3 flex items-center justify-center">
-                                    <img [src]="group" class="h-24">
-                                </div>
-                            </div>
-
-                            <div class="flex space-x-4 justify-end md:w-full">
-                                <button  *ngIf="i<6" (click)="addPhoto()" class="md:w-1/4 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                                    +
-                                </button>
-                                <button (click)="deletePhoto(group, i)" class="md:w-1/4 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                                    -
-                                </button>
-                            </div>
-
-                        </div>
-                    </div>
-                    
-                </div> 
+      <div class="width-full">
+        <div *ngFor="let group of photo; let i = index" class="width-full">
+          <div class="md:flex md:items-center mb-6">
+            <div class="md:w-1/5">
+              <label
+                class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                for="inline-full-name"
+              >
+                Foto
+              </label>
             </div>
 
-            
-        
-            <div class="md:flex md:items-center mb-6 ">
-                <div class="md:w-1/3"></div>
-                <div class="flex space-x-4 justify-end md:w-2/3">
-                    <button   [disabled]="form.invalid" (click)="createBar()" class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                        Crear
-                    </button>
-                    <button (click)="goBack()" class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
-                        Regresar
-                    </button>
+            <div class="md:w-4/5">
+              <div
+                *ngIf="group == 'null'"
+                class="flex items-center justify-center bg-grey-lighter"
+              >
+                <label
+                  class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide border border-blue cursor-pointer hover:bg-orange-500 hover:text-white"
+                >
+                  <span class="mt-2 text-base leading-normal"
+                    >Selecciona un archivo</span
+                  >
+                  <lib-file-upload-firestorage
+                    storagePath="bar"
+                    (res)="uploadPhoto($event, i)"
+                    class="hidden"
+                  >
+                  </lib-file-upload-firestorage>
+                </label>
+              </div>
+
+              <div *ngIf="group != 'null'" class="width-full bg-grey-lighter">
+                <div class="width-2/3 flex items-center justify-center">
+                  <img [src]="group" class="h-24" />
                 </div>
+              </div>
+
+              <div class="flex space-x-4 justify-end md:w-full">
+                <button
+                  *ngIf="i < 6"
+                  (click)="addPhoto()"
+                  class="md:w-1/4 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  type="button"
+                >
+                  +
+                </button>
+                <button
+                  (click)="deletePhoto(group, i)"
+                  class="md:w-1/4 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  type="button"
+                >
+                  -
+                </button>
+              </div>
             </div>
-        </form>
-    </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="md:flex md:items-center mb-6">
+        <div class="md:w-1/3"></div>
+        <div class="flex space-x-4 justify-end md:w-2/3">
+          <button
+            [disabled]="form.invalid"
+            (click)="createBar()"
+            class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+            type="button"
+          >
+            Crear
+          </button>
+          <button
+            (click)="goBack()"
+            class="md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+            type="button"
+          >
+            Regresar
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
 
 <app-footer></app-footer>
