--- a/src/app/components/admin/drink/add-drink/add-drink.component.html
+++ b/src/app/components/admin/drink/add-drink/add-drink.component.html
@@ -7,7 +7,7 @@
     <h2 class="text-4xl">CREA UN TRAGO</h2>
   </div>
 </div>
-<div class="w-full flex justify-center items-center h-full pb-32">
+<div class="w-full flex justify-center items-center h-full">
   <form
     [formGroup]="form"
     class="w-2/4 content-center"
