--- a/src/app/components/admin/drink/edit-drink/edit-drink.component.html
+++ b/src/app/components/admin/drink/edit-drink/edit-drink.component.html
@@ -1,5 +1,5 @@
 <app-admin-header></app-admin-header>
-<div *ngIf="!loading" class="pb-32">
+<div *ngIf="!loading">
   <div
     class="h-20 w-full flex justify-center items-center"
     style="font-family: 'Open Sans', sans-serif;"
