--- a/src/app/components/admin/ingredient/list-ingredient/list-ingredient.component.html
+++ b/src/app/components/admin/ingredient/list-ingredient/list-ingredient.component.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-<div *ngIf="!loading" class="pb-32">
+<div *ngIf="!loading">
   <div
     *ngFor="let ing of ingredients"
     class="w-full flex justify-center items-center h-full"
