--- a/src/app/components/drinks/filter-parent/filter-parent.component.html
+++ b/src/app/components/drinks/filter-parent/filter-parent.component.html
@@ -170,7 +170,7 @@
   style="font-family: 'Open Sans', sans-serif;"
 >
   <button
-    class="pb-48 bg-orange-500 transition duration-500 ease-in-out text-md md:text-xl px-1 py-1 text-white font-bold md:py-2 md:px-2 rounded-full hover:bg-orange-700"
+    class="bg-orange-500 transition duration-500 ease-in-out text-md md:text-xl px-1 py-1 text-white font-bold md:py-2 md:px-2 rounded-full hover:bg-orange-700"
   >
     <p class="p-1 pl-10 pr-10">Buscar Recetas</p>
   </button>
