--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div *ngIf="!userLoading" class="pb-25">
+<div *ngIf="!userLoading">
   <div *ngIf="user" class="p-40">
     <h3 class="text-4xl">Bienvenido/a, {{ user.f_name }}!</h3>
     <div class="py-10 items-center">
