--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -5,7 +5,7 @@
 >
   <div><h2 class="text-4xl">REGÍSTRATE</h2></div>
 </div>
-<div class="w-full flex justify-center items-center h-full pt-16 pb-48">
+<div class="w-full flex justify-center items-center h-full pt-16">
   <form
     [formGroup]="form"
     (ngSubmit)="onSubmit(form.value)"
