--- a/src/app/components/admin/bar/add-bar/add-bar.component.html
+++ b/src/app/components/admin/bar/add-bar/add-bar.component.html
@@ -496,59 +496,18 @@
                 placeholder="Ej. Cóctel muy refrescante que no sabe mucho a alcohol."
               />
             </div>
-
-            <div formArrayName="phone" class="width-full">
-              <div
-                *ngFor="let group of PhoneArray.controls; let i = index"
-                [formGroupName]="i"
-                class="width-full"
-              >
-                <div class="md:flex md:items-center mb-6">
-                  <div class="md:w-1/5">
-                    <label
-                      class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-                      for="inline-full-name"
-                    >
-                      Número de teléfono
-                    </label>
-                  </div>
-                  <div class="md:w-2/5">
-                    <input
-                      formControlName="phone"
-                      class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                      id="inline-full-name"
-                      type="text"
-                      placeholder="Ej. 02123451234"
-                    />
-                  </div>
-                  <div class="flex space-x-4 justify-end md:w-2/5">
-                    <button
-                      *ngIf="i < 4"
-                      (click)="addPhone()"
-                      class="md:w-1/3 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                      type="button"
-                    >
-                      +
-                    </button>
-                    <button
-                      *ngIf="i != 0"
-                      (click)="deletePhone(i)"
-                      class="md:w-1/3 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                      type="button"
-                    >
-                      -
-                    </button>
-                  </div>
-                </div>
-                <app-required-field
-                  *ngIf="
-                    group.controls.phone.invalid && group.controls.phone.touched
-                  "
-                  [text]="'Este campo es requerido.'"
-                ></app-required-field>
-              </div>
-            </div>
           </div>
+          <div class="md:flex md:items-center mb-6 ">
+                <div class="md:w-1/3"></div>
+                    <div class="flex space-x-4 justify-end md:w-2/3">
+                      <button  (click)="addMenu()" class="md:w-1/4 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                        +
+                      </button>
+                      <button (click)="deleteMenu(i)" *ngIf="i>0" class="md:w-1/4 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" type="button">
+                        -
+                      </button>
+                </div>
+            </div>
         </div>
       </div>
 
