--- a/src/app/components/admin/bar/add-bar/add-bar.component.html
+++ b/src/app/components/admin/bar/add-bar/add-bar.component.html
@@ -6,7 +6,7 @@
 
 <app-admin-header></app-admin-header>
 
-<div *ngIf="!loading">
+<div *ngIf="loading">
   <div
     class="h-20 w-full flex justify-center items-center"
     style="font-family: 'Open Sans', sans-serif;"
