details-regis-crud

--- a/src/app/components/profile-page/edit-user/edit-user.component.html
+++ b/src/app/components/profile-page/edit-user/edit-user.component.html
@@ -1,5 +1,5 @@
  <app-admin-header></app-admin-header>
-<!--<div
+<div
   class="h-20 w-full flex justify-center items-center pt-16"
   style="font-family: 'Open Sans', sans-serif;"
 >
@@ -205,7 +205,7 @@
 
 
   </form>
-</div>-->
+</div>
 
    
 
@@ -233,7 +233,7 @@
             class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
             for="inline-full-name"
           >
-            Coloque su contraseña vieja
+            Contraseña actual
           </label>
         </div>
         <div class="md:w-4/5">
@@ -269,7 +269,7 @@
             class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
             for="inline-full-name"
           >
-            Coloque su nueva contraseña
+            Nueva contraseña
           </label>
         </div>
         <div class="md:w-4/5">
@@ -309,9 +309,6 @@
     <div class="bg-red-100 border border-red-300 text-red-700 pl-4 pr-8 py-3 rounded relative" role="alert">
         <strong class="font-bold">Error! </strong>
         <span class="block sm:inline">Contraseña incorrecta.</span>
-        <!-- <span class="absolute pin-t pin-b pin-r pr-2 py-3">
-          <svg class="h-6 w-6 text-red" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
-        </span> -->
       </div>
 </div>
 
