--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -75,4 +75,11 @@
   </form>
 </div>
 
+<div id="al" style="display: none;" class="px-5 pt-12">
+  <div class="bg-red-100 border border-red-300 text-red-700 pl-4 pr-8 py-3 rounded relative" role="alert">
+      <strong class="font-bold">Ups! </strong>
+      <span class="block sm:inline">Uno de los datos suministrados es incorrecto.</span>
+    </div>
+</div>
+
 <app-footer></app-footer>
