zonas y juegos CRUDs

--- a/src/app/components/admin/bar/add-bar/add-bar.component.html
+++ b/src/app/components/admin/bar/add-bar/add-bar.component.html
@@ -528,7 +528,7 @@
             for="inline-full-name"
           >
             Por favor, esperar a que aparezcan las fotos. Esto indicará que
-            fueron cargadas.
+            fueron cargadas con éxito.
           </label>
         </div>
       </div>
