--- a/src/app/components/admin/bar/edit-bar/edit-bar.component.html
+++ b/src/app/components/admin/bar/edit-bar/edit-bar.component.html
@@ -287,7 +287,7 @@
                 </div>
                 <div class="md:w-full">
                 <label style="font-family: 'Open Sans', sans-serif;" class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4" for="inline-full-name">
-                    Por favor, esperar a que aparezcan las fotos. Esto indicará que fueron cargadas.
+                    Por favor, esperar a que aparezcan las fotos. Esto indicará que fueron cargadas con éxito.
                 </label>
                 </div>
             </div>
