--- a/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
+++ b/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
@@ -13,6 +13,7 @@
       class="w-2/4 content-center"
       encType="multipart/form-data"
     >
+    <div class="width-full">
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/5">
           <label
@@ -32,7 +33,13 @@
           />
         </div>
       </div>
+      <app-required-field
+            [text]="'Este campo es requerido.'"
+            *ngIf="form.get('name').invalid && form.get('name').touched"
+        ></app-required-field>
+      </div>
 
+      <div class="width-full">
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/5">
           <label
@@ -65,6 +72,33 @@
               />
             </svg>
           </div>
+        </div>
+      </div>
+      <app-required-field
+            [text]="'Este campo es requerido.'"
+            *ngIf="form.get('category').invalid && form.get('category').touched"
+        ></app-required-field>
+      </div>
+
+      <div class="md:items-center mb-6">
+        <div class="md:w-full">
+          <label
+            style="font-family: 'Open Sans', sans-serif;"
+            class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
+            for="inline-full-name"
+          >
+            Galería
+          </label>
+        </div>
+        <div class="md:w-full">
+          <label
+            style="font-family: 'Open Sans', sans-serif;"
+            class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
+            for="inline-full-name"
+          >
+            Por favor, esperar a que aparezcan las fotos. Esto indicará que
+            fueron cargadas con éxito.
+          </label>
         </div>
       </div>
 
@@ -118,6 +152,7 @@
         <div class="md:w-1/3"></div>
         <div class="flex space-x-4 justify-end md:w-2/3">
           <button
+            [disabled]="form.invalid"
             (click)="editIngredient()"
             class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
             type="button"
