--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,7 +8,7 @@
 <div class="w-full flex justify-center items-center h-full pt-16">
   <form
     [formGroup]="form"
-    (ngSubmit)="onSubmit(form.value)"
+    (ngSubmit)="onSubmit()"
     class="w-2/4 content-center"
   >
     <div class="md:flex md:items-center mb-6">
