--- a/src/app/components/drinks/filter-child/filter-child.component.html
+++ b/src/app/components/drinks/filter-child/filter-child.component.html
@@ -4,7 +4,7 @@
     <div class=" grid gap-4 md:gap-8 grid-cols-3 sm:grid-cols-3 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 transition ease-in duration-300" 
            style="font-family: 'Open Sans', sans-serif;" >
         <div *ngFor="let item of ingredients" >
-            <div class="w-24  md:w-40 "  (click)="select(item)">
+            <div class="w-32  md:w-48 "  (click)="select(item)">
                 <div 
                 [ngClass]="item.style? 'boder shadow rounded-lg p-3  flex items-center flex-col ease-in duration-300': 'boder shadow rounded-lg p-3  flex items-center flex-col bg-orange-300 transition ease-in duration-300'"
                 >
@@ -13,10 +13,10 @@
                     background-size: cover;
                     position: relative; "
                     [style.backgroundImage]="'url('+ item.pic +')'"
-                    class=" w-20 h-20 mb-2 md:h-32 md:w-24 md:mb-4 border shadow rounded-full ">
+                    class=" w-24 bg-white h-24 mb-2 md:h-40 md:w-32 md:mb-4 border shadow rounded-full ">
                     </div>
 
-                    <p class=" text-sm "> {{item.name}} </p>
+                    <p class=" text-md "> {{item.name}} </p>
                 </div>
             </div>
         </div>  
