--- a/src/app/components/admin/drink/add-drink/add-drink.component.html
+++ b/src/app/components/admin/drink/add-drink/add-drink.component.html
@@ -142,10 +142,13 @@
           *ngIf="!this.main_image"
           class="flex items-center justify-center bg-grey-lighter"
         >
+          <label class="justify-center font-normal text-base sm:text-lg md:text-xl">
+            <span>Ningun archivo seleccionado</span>
+          </label>
           <label
-            class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide border border-blue cursor-pointer hover:bg-orange-500 hover:text-white"
+            class="w-full flex justify-center h-full items-center px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide border border-blue cursor-pointer hover:bg-orange-400 hover:text-white"
           >
-            <span class="mt-2 text-base leading-normal"
+            <span class="text-base leading-normal"
               >Selecciona un archivo</span
             >
             <lib-file-upload-firestorage
@@ -161,7 +164,7 @@
           <div class="width-2/3 flex items-center justify-center">
             <img [src]="this.main_image" class="h-24" />
           </div>
-          <div class="flex space-x-4 justify-end w-full">
+          <div class="flex space-x-4 justify-center w-full">
             <button
               (click)="changeImage(this.main_image)"
               class="md:w-1/5 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
