--- a/src/app/components/admin/bar/list-bar/list-bar.component.html
+++ b/src/app/components/admin/bar/list-bar/list-bar.component.html
@@ -8,24 +8,13 @@
 </div>
 
 <div *ngIf="!loading">
-  <div class="w-full flex justify-center items-center h-full">
-    <div class="w-2/4 content-center">
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/5"></div>
-        <div class="md:w-2/5"></div>
-        <div class="md:w-3/5">
-          <div class="flex space-x-4 justify-end md:w-full">
-            <button
-              (click)="create()"
-              class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button"
-            >
-              Crear
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
+
+  <div class="flex space-x-4 justify-center md:w-full">
+    <button (click)="create()"
+      class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+      type="button">
+      Crear
+    </button>
   </div>
 
   <div
