--- a/src/app/components/admin/ingredient/list-ingredient/list-ingredient.component.html
+++ b/src/app/components/admin/ingredient/list-ingredient/list-ingredient.component.html
@@ -4,28 +4,16 @@
   class="h-20 w-full flex justify-center items-center"
   style="font-family: 'Open Sans', sans-serif;"
 >
-  <div><h2 class="text-4xl">LISTA DE INGREDIENTES</h2></div>
+  <div><h2 class="text-4xl font-bold">LISTA DE INGREDIENTES</h2></div>
 </div>
 
 <div class="w-full flex justify-center items-center h-full">
-    <div class="w-2/4 content-center">
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/5"></div>
-        <div class="md:w-2/5"></div>
-        <div class="md:w-3/5">
-          <div class="flex space-x-4 justify-end md:w-full">
-            <button
-              (click)="create()"
-              class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button"
-            >
-              Crear
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <button (click)="create()"
+    class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+    type="button">
+    Crear ingrediente
+  </button>
+</div>
 
 <div *ngIf="!loading">
   <div
