--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -55,16 +55,16 @@
 
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3"></div>
-      <div class="flex space-x-4 justify-end md:w-2/3">
+      <div class="flex space-x-4 justify-center sm:justify-end md:justify-end md:w-2/3">
         <button
-          class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+          class="text-lg md:text-2xl md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
           type="submit"
           [disabled]="!form.valid"
         >
           Entrar
         </button>
         <button
-          class="md:w-1.5/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+          class="text-lg md:text-2xl md:w-1.5/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
           type="button"
           [routerLink]="'/register'"
         >
