--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -4,9 +4,10 @@
     class="w-1/3 px-2 rounded overflow-hidden my-2"
   >
     <img
-      class="w-full pl-16 pr-32 pt-16"
+      class="w-full pl-16 pr-32 pt-16 hover: w-50 cursor-pointer"
       src="{{ x.main_image }}"
       alt="Sunset in the mountains"
+      (click)="detail(x._id)"
     />
     <div class="px-6 pl-16">
       <div
