--- a/src/app/components/bars/detail-bar/detail-bar.component.html
+++ b/src/app/components/bars/detail-bar/detail-bar.component.html
@@ -12,7 +12,7 @@ style="max-width: 90%; font-family: 'Open Sans', sans-serif;"
   <span class="text-5xl text-black bold pr-6 pl-8">{{bar.name}}</span> 
   <span class="text-4xl text-black"> {{zone.name}}</span>
 
-  <div class="flex lg:flex-no-wrap md:flex-no-wrap sm:flex-wrap pt-16">
+  <div class="flex flex-wrap lg:flex-no-wrap md:flex-no-wrap sm:flex-wrap xs pt-16">
     <div
     *ngFor="let x of images"
     class="w-1/3 px-2 overflow-hidden my-2"
