--- a/src/app/components/admin/admin-header/admin-header.component.html
+++ b/src/app/components/admin/admin-header/admin-header.component.html
@@ -4,7 +4,7 @@
       class="object-scale-down h-16 mx-auto" /></a>
 </div>
 <div class="bg-gray-400 h-64 w-full flex items-center flex-col" style="
-    background-image: url(assets/images/header6.jpg);
+    background-image: url(assets/images/header13.jpg);
     background-size: cover;
-    background-position: top;
+    background-position: center;
   "></div>
