--- a/src/app/components/admin/bar/list-bar/list-bar.component.html
+++ b/src/app/components/admin/bar/list-bar/list-bar.component.html
@@ -13,7 +13,7 @@
 
 <div *ngIf="!loading">
 
-  <div class="flex space-x-4 justify-center md:w-full">
+  <div class="flex space-x-4 justify-center md:w-full pb-10 pt-4">
     <button (click)="create()"
       class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
       type="button">
