--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -44,7 +44,7 @@
         </div>
         <div class="w-full flex items-center justify-center">
             <div class="text-white">
-                <a href="/profile" class="hover:text-white">Juegos</a>
+                <a href="/juegos" class="hover:text-white">Juegos</a>
             </div>
         </div>
 
