--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
   /></a>
 </div>
 <div
-  class="bg-gray-400 h-64 w-full flex items-center flex-col bg-fixed"
+  class="bg-gray-400 h-64 w-full flex items-center flex-col"
   style="
     background-image: url(assets/images/banner_drinkly.jpg);
     background-size: cover;
