--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,10 @@ body {
   overflow-x: hidden;
 }
 
+.move{
+  transition: all .5s;
+}
+
 /**
    * Render the `main` element consistently in IE.
    */
