--- a/src/app/components/admin/drink/list-drink/list-drink.component.html
+++ b/src/app/components/admin/drink/list-drink/list-drink.component.html
@@ -1,60 +1,69 @@
-<app-admin-header></app-admin-header>
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
 
-<div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
-  <div>
-    <h2 class="text-4xl">LISTA DE TRAGOS</h2>
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move"> 
+  
+  <app-admin-header></app-admin-header>
+
+  <div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
+    <div>
+      <h2 class="text-4xl">LISTA DE TRAGOS</h2>
+    </div>
   </div>
-</div>
 
-<div class="w-full flex justify-center items-center h-full">
+  <div class="flex space-x-4 justify-center md:w-full">
+    <button (click)="create()"
+      class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+      type="button">
+      Crear
+    </button>
+  </div>
 
-          <div class="flex space-x-4 justify-center md:w-full">
-            <button (click)="create()"
-              class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button">
-              Crear
-            </button>
+  <div class="w-full flex justify-center items-center h-full">
+
+  <div *ngIf="!loading">
+    <div *ngFor="let d of drinks" class="w-full flex justify-center items-center h-full">
+      <div class="w-2/4 content-center">
+        <div class="md:flex md:items-center mb-6">
+          <div class="md:w-1/5">
+            <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
+              {{ d.name }}
+            </label>
           </div>
 
 
-<div *ngIf="!loading">
-  <div *ngFor="let d of drinks" class="w-full flex justify-center items-center h-full">
-    <div class="w-2/4 content-center">
-      <div class="md:flex md:items-center mb-6">
-        <div class="md:w-1/5">
-          <label class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
-            {{ d.name }}
-          </label>
-        </div>
 
-
-
-        <div class="md:w-3/5">
-          <div class="flex space-x-4 justify-end md:w-full">
-            <button (click)="editDrink(d._id)"
-              class="md:w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button">
-              Editar
-            </button>
-            <button *ngIf="d.available" (click)="inhabilitateDrink(d._id)"
-              class="md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button">
-              Eliminar
-            </button>
-            <button (click)="deleteDrink(d._id)"
-              class="hidden md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button">
-              Eliminar
-            </button>
-            <button *ngIf="!d.available" (click)="habilitateDrink(d._id)"
-              class="md:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-              type="button">
-              Recuperar
-            </button>
+          <div class="md:w-3/5">
+            <div class="flex space-x-4 justify-end md:w-full">
+              <button (click)="editDrink(d._id)"
+                class="md:w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                type="button">
+                Editar
+              </button>
+              <button *ngIf="d.available" (click)="inhabilitateDrink(d._id)"
+                class="md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                type="button">
+                Eliminar
+              </button>
+              <button (click)="deleteDrink(d._id)"
+                class="hidden md:w-1/3 shadow bg-red-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                type="button">
+                Eliminar
+              </button>
+              <button *ngIf="!d.available" (click)="habilitateDrink(d._id)"
+                class="md:w-1/3 shadow bg-gray-500 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                type="button">
+                Recuperar
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  </div>
+
+  <div [ngStyle]="{'position': loading? 'absolute':'initial', 'width.%': '100', 'bottom': '0'}">
+    <app-footer></app-footer>
+  </div>
+
 </div>
-<app-footer></app-footer>
