--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div
-  class="h-25 flex items-center bg-gray-200 absolute w-full bottom-0"
+  class="h-25 flex items-center bg-gray-200 w-full bottom-0"
 >
   <div class="flex-initial pr-2 pl-2 sm:pl-32 sm:pr-20 md:pl-32 md:pr-20 ">
     <img src="assets/images/Drinkly-1.png" alt="drinkly" class="h-20 sm:h-32 md:h-32 w-auto"/>
