--- a/src/app/components/test-bar/test-bar.component.html
+++ b/src/app/components/test-bar/test-bar.component.html
@@ -1,11 +1,12 @@
 
 <input type="checkbox" (change)="makeChange($event)" class="h-10 w-10" id="check">
 <label for="check"> 
-    <svg class="fill-current h-10 w-10 outline-none" id="cancel">
+    <svg [ngStyle]="{'left.rem': sidebar_left? '13': '-13'}" class="fill-current h-10 w-10 outline-none" id="cancel">
         <path
         d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" />
     </svg>  
-    <svg class="fill-current h-10 w-10 outline-none" id="btn">
+    <svg [ngStyle]="{'left.rem': !sidebar_left? '1': '12', 'opacity':!sidebar_left? '1': '0', 'pointer-events':!sidebar_left? 'auto': 'none'}" 
+    class="fill-current h-10 w-10 outline-none" id="btn">
         <path
         d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z" />
     </svg> 
@@ -25,7 +26,7 @@
 
 </div>
 
-<div class="move">   
+<!-- <div [ngStyle]="{'margin-left.rem': !sidebar_left? '0': '16'}" class="move">   
     <app-header></app-header>
     <app-footer></app-footer>
-</div>
+</div> -->
