--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,25 +1,39 @@
-<div class="flex flex-wrap -mx-2">
-  <div
-    *ngFor="let x of barOrDrink"
-    class="w-1/3 px-2 rounded overflow-hidden my-2"
-  >
-    <img
-      class="w-full pl-16 pr-32 pt-16 hover: w-50 cursor-pointer"
-      src="{{ x.main_image }}"
-      alt="Sunset in the mountains"
-      (click)="detail(x._id)"
-    />
-    <div class="px-6 pl-16">
-      <div
-        class="bg-white rounded-full px-3 py-1 text-sm font-semibold text-black text-xl mr-2"
-      >
-        {{ x.name }}
+<div class="flex w-full">
+  <app-navbar></app-navbar>
+  <div class="pl-64 w-full">
+      <div class="w-full">
+          <app-header></app-header>
+          <div class="w-full">
+            <div class="flex flex-wrap -mx-2">
+              <div
+                *ngFor="let x of barOrDrink"
+                class="w-1/3 px-2 rounded overflow-hidden my-2"
+              >
+                <img
+                  class="w-full pl-16 pr-32 pt-16 hover: w-50 cursor-pointer"
+                  src="{{ x.main_image }}"
+                  alt="Sunset in the mountains"
+                  (click)="detail(x._id)"
+                />
+                <div class="px-6 pl-16">
+                  <div
+                    class="bg-white rounded-full px-3 py-1 text-sm font-semibold text-black text-xl mr-2"
+                  >
+                    {{ x.name }}
+                  </div>
+                  <div
+                    class="bg-white rounded-full px-3 py-1 text-sm text-grey-darker mr-2"
+                  >
+                    {{ getZone(x.location.zone) }}
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+          </div>
       </div>
-      <div
-        class="bg-white rounded-full px-3 py-1 text-sm text-grey-darker mr-2"
-      >
-        {{ getZone(x.location.zone) }}
-      </div>
-    </div>
   </div>
 </div>
+<app-footer></app-footer>
+
+
