--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,85 +1,99 @@
-<app-admin-header></app-admin-header>
-<div
-  class="h-20 w-full flex justify-center items-center pt-16"
-  style="font-family: 'Open Sans', sans-serif;"
->
-  <div><h2 class="text-4xl">LOGUEATE</h2></div>
+<div class="flex w-full">
+  <app-navbar></app-navbar>
+  <div class="pl-64 w-full">
+      <div class="w-full">
+          <app-admin-header></app-admin-header>
+          <div class="w-full">
+            <div
+            class="h-20 w-full flex justify-center items-center pt-16"
+            style="font-family: 'Open Sans', sans-serif;"
+          >
+            <div><h2 class="text-4xl">LOGUEATE</h2></div>
+          </div>
+          <div class="w-full flex justify-center items-center h-full pt-16">
+            <form
+              [formGroup]="form"
+              (ngSubmit)="onSubmit()"
+              class="w-2/4 content-center"
+            >
+              <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                  <label
+                    class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                    for="inline-full-name"
+                  >
+                    Nombre de usuario
+                  </label>
+                </div>
+                <div class="md:w-4/5">
+                  <input
+                    formControlName="user_name"
+                    class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                    id="inline-full-name"
+                    type="text"
+                    placeholder="Nombre de usuario"
+                    required
+                  />
+                </div>
+              </div>
+          
+              <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/5">
+                  <label
+                    class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                    for="inline-full-name"
+                  >
+                    Contraseña
+                  </label>
+                </div>
+                <div class="md:w-4/5">
+                  <input
+                    formControlName="password"
+                    class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                    id="inline-full-name"
+                    type="password"
+                    placeholder="Ingrese su contraseña"
+                    required
+                  />
+                </div>
+              </div>
+          
+              <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/3"></div>
+                <div class="flex space-x-4 justify-center sm:justify-end md:justify-end md:w-2/3">
+                  <button
+                    class="text-lg md:text-2xl md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="submit"
+                    [disabled]="!form.valid"
+                  >
+                    Entrar
+                  </button>
+                  <button
+                    class="text-lg md:text-2xl md:w-1.5/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                    [routerLink]="'/register'"
+                  >
+                    Regístrate!
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+          
+          <div id="al" style="display: none;" class="px-5 pt-12">
+            <div class="bg-red-100 border border-red-300 text-red-700 pl-4 pr-8 py-3 rounded relative" role="alert">
+                <strong class="font-bold">Lo sentimos! </strong>
+                <span class="block sm:inline">Uno de los datos suministrados es incorrecto. Si está seguro de ellos, es posible que no se pueda entrar con este usuario.</span>
+              </div>
+          </div>
+
+
+          </div>
+      </div>
+  </div>
 </div>
-<div class="w-full flex justify-center items-center h-full pt-16">
-  <form
-    [formGroup]="form"
-    (ngSubmit)="onSubmit()"
-    class="w-2/4 content-center"
-  >
-    <div class="md:flex md:items-center mb-6">
-      <div class="md:w-1/5">
-        <label
-          class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-          for="inline-full-name"
-        >
-          Nombre de usuario
-        </label>
-      </div>
-      <div class="md:w-4/5">
-        <input
-          formControlName="user_name"
-          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-          id="inline-full-name"
-          type="text"
-          placeholder="Nombre de usuario"
-          required
-        />
-      </div>
-    </div>
-
-    <div class="md:flex md:items-center mb-6">
-      <div class="md:w-1/5">
-        <label
-          class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-          for="inline-full-name"
-        >
-          Contraseña
-        </label>
-      </div>
-      <div class="md:w-4/5">
-        <input
-          formControlName="password"
-          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-          id="inline-full-name"
-          type="password"
-          placeholder="Ingrese su contraseña"
-          required
-        />
-      </div>
-    </div>
-
-    <div class="md:flex md:items-center mb-6">
-      <div class="md:w-1/3"></div>
-      <div class="flex space-x-4 justify-center sm:justify-end md:justify-end md:w-2/3">
-        <button
-          class="text-lg md:text-2xl md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-          type="submit"
-          [disabled]="!form.valid"
-        >
-          Entrar
-        </button>
-        <button
-          class="text-lg md:text-2xl md:w-1.5/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-          type="button"
-          [routerLink]="'/register'"
-        >
-          Regístrate!
-        </button>
-      </div>
-    </div>
-  </form>
-</div>
-
-<div id="al" style="display: none;" class="px-5 pt-12">
-  <div class="bg-red-100 border border-red-300 text-red-700 pl-4 pr-8 py-3 rounded relative" role="alert">
-      <strong class="font-bold">Lo sentimos! </strong>
-      <span class="block sm:inline">Uno de los datos suministrados es incorrecto. Si está seguro de ellos, es posible que no se pueda entrar con este usuario.</span>
-    </div>
-</div>
-
 <app-footer></app-footer>
+
+
+
+
