--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,29 +1,37 @@
-<div class="flex bg-black">
-  <app-sidebar></app-sidebar>
-  <img
-    src="assets/images/Drinkly-2.png"
-    alt="logo_drinkly"
-    class="object-scale-down h-16 mx-auto"
-  />
-</div>
-<div
-  style="background-image: url('assets/images/404bg.jpg');"
-  class="my-6 pt-24 pb-64 mt-48 bg-cover bg-blue-700 m-auto max-w-5xl self-center flex items-center rounded-lg shadow"
->
-  <div
-    class="p-10 ml-20 shadow-2xl rounded-lg items-center"
-    style="background-color: white;"
-  >
-    <h1 class="font-serif subpixel-antialiased text-xl text-black">
-      <h1 class="text-4xl">Error 404:</h1>
-      Ups! Parece que esta ruta no existe...
-    </h1>
-    <button
-      [routerLink]="'/drinks'"
-      class="ml-20 mt-5 font-serif subpixel-antialiased text-xl bg-orange-500 hover:bg-orange-600 text-black px-2 rounded-md"
-    >
-      Volver al inicio
-    </button>
+<div class="flex w-full">
+  <app-navbar></app-navbar>
+  <div class="pl-64 w-full">
+      <div class="w-full">
+          <div class="w-full">
+            <div class="flex bg-black">
+              <img
+                src="assets/images/Drinkly-2.png"
+                alt="logo_drinkly"
+                class="object-scale-down h-16 mx-auto"
+              />
+            </div>
+            <div
+              style="background-image: url('assets/images/404bg.jpg');"
+              class="my-6 pt-24 pb-64 mt-48 bg-cover bg-blue-700 m-auto max-w-5xl self-center flex items-center rounded-lg shadow"
+            >
+              <div
+                class="p-10 ml-20 shadow-2xl rounded-lg items-center"
+                style="background-color: white;"
+              >
+                <h1 class="font-serif subpixel-antialiased text-xl text-black">
+                  <h1 class="text-4xl">Error 404:</h1>
+                  Ups! Parece que esta ruta no existe...
+                </h1>
+                <button
+                  [routerLink]="'/drinks'"
+                  class="ml-20 mt-5 font-serif subpixel-antialiased text-xl bg-orange-500 hover:bg-orange-600 text-black px-2 rounded-md"
+                >
+                  Volver al inicio
+                </button>
+              </div>
+            </div>              
+          </div>
+      </div>
   </div>
 </div>
 <app-footer></app-footer>
