prov_sidebar_full2

--- a/src/app/components/admin/user/list-user/list-user.component.html
+++ b/src/app/components/admin/user/list-user/list-user.component.html
@@ -2,7 +2,7 @@
   <app-navbar></app-navbar>
   <div class="pl-64 w-full">
     <div class="w-full">
-      <app-header [hasSearchBar]="true" [searchBarContent]="'trago'"></app-header>
+      <app-admin-header></app-admin-header>
       <div class="w-full"> 
 
         <div
