vista juegos, vista receta estatica, vista admin-home, responsive

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<div  class="fixed top-0 font-sans antialiased h-screen w-64">
+<div  class="fixed top-0 font-sans antialiased h-screen w-auto">
     <div id="sidebar" style="font-family: 'Open Sans', sans-serif;">
         <!-- Sidebar -->
         <div class="bg-black relative h-full min-h-screen">
@@ -32,19 +32,17 @@
                 <a href="/bars"class="hover:text-white">Bares</a>
             </div>
         </div>
-
-        <div class="h-4">
+        <div class="h-8">
         </div>
-        <div class="w-full flex items-center justify-center">
-            <div class="h-10 w-10">
-                <img src="assets/images/game.png" class="h-10 w-10">
-            </div>
-        </div>
-        <div class="h-2">
-        </div>
-        <div class="w-full flex items-center justify-center">
+        <div class="w-full flex items-center justify-center px-24">
             <div class="text-white">
-                <a href="/profile" class="hover:text-white">Juegos</a>
+                <a href="/juegos" class="hover:text-white">
+                    <div class="w-full flex items-center justify-center py-2">
+                        <div class="h-16 w-16">
+                            <img src="assets/images/game.png" class="h-16 w-16">
+                        </div>
+                    </div>
+                    Juegos</a>
             </div>
         </div>
 
