--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -88,7 +88,7 @@
         </div>
         <div *ngIf="isAdmin" class="w-full flex items-center justify-center">
             <div class="text-white">
-                <a href="/profile" class="hover:text-white">Administrar</a>
+                <a href="/admin-home" class="hover:text-white">Administrar</a>
             </div>
         </div>
 
