--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -11,7 +11,7 @@
               class="w-1/3 px-2 rounded overflow-hidden my-2"
             >
               <img
-                class="w-full pl-16 pr-32 pt-16"
+                class="w-full pl-16 pr-32 pt-16 cursor-pointer"
                 src="{{ x.pictures }}"
                 alt="Sunset in the mountains"
               />
