--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -14,13 +14,13 @@
                   Seleccionar ingredientes
           </button>
         </div>        
-          <div  *ngIf="!loading" class="flex flex-wrap -mx-2 pb-12">
+          <div  *ngIf="!loading" class="flex flex-wrap md:flex-no-wrap sm:flex-no-wrap -mx-2 pb-12 pt-16 pr-16 pl-16">
             <div
               *ngFor="let x of drinks"
               class="w-1/3 px-2 rounded overflow-hidden my-2"
             >
               <img
-                class="w-full pl-16 pr-32 pt-16 cursor-pointer"
+                class="w-full h-full cursor-pointer"
                 src="{{ x.pictures }}"
                 alt="Sunset in the mountains"
               />
