--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -4,13 +4,13 @@
       <div class="w-full">
           <app-header></app-header>
           <div class="w-full">
-            <div class="flex flex-wrap -mx-2">
+            <div class="flex flex-wrap md:flex-no-wrap sm:flex-no-wrap -mx-2 pb-12 pt-16 pr-16 pl-16">
               <div
                 *ngFor="let x of barOrDrink"
                 class="w-1/3 px-2 rounded overflow-hidden my-2"
               >
                 <img
-                  class="w-full pl-16 pr-32 pt-16 hover: w-50 cursor-pointer"
+                  class="w-full h-full cursor-pointer"
                   src="{{ x.main_image }}"
                   alt="Sunset in the mountains"
                   (click)="detail(x._id)"
