--- a/src/app/components/bars/detail-bar/detail-bar.component.html
+++ b/src/app/components/bars/detail-bar/detail-bar.component.html
@@ -32,30 +32,30 @@
             </div>
             
             <div class="mt-12 m-auto max-w-3xl text-center">  
-              <div class="text-3xl bold">RATING:</div>  
+              <div class="text-3xl bold">RATING</div>  
               {{bar.rating}}
             </div>
             
             <div class="mt-12 m-auto max-w-3xl text-center">  
-             <div class="text-3xl bold">HORAS DE TRABAJO: </div>  
+             <div class="text-3xl bold">HORAS DE TRABAJO </div>  
              {{bar.working_hours}}
             </div>
             
             <div class="mt-12 m-auto max-w-3xl text-center">  
-              <div class="text-3xl bold">DIRECCIÓN: </div>  
+              <div class="text-3xl bold">DIRECCIÓN</div>  
               {{bar.address}}
              </div>
             
              <div class="mt-12 m-auto max-w-3xl text-center">  
-              <div class="text-3xl bold">EXCHALE UN VISTAZO A SU MENU: </div>  
+              <div class="text-3xl bold">ÉCHALE UN VISTAZO A SU MENÚ</div>  
               <div *ngFor="let d of bar.menu" class="pt-2">{{d.name}}: {{d.description}} </div>
              </div>
             
             <div class="mt-12 m-auto max-w-3xl text-center">  
-              <div class="text-3xl bold">CONTÁCTALOS Y SÍGUELOS: </div> 
+              <div class="text-3xl bold">CONTÁCTALOS Y SÍGUELOS</div> 
             
               <div class="mt-5 m-auto max-w-3xl text-center">  
-                <div class="text-1xl bold">Teléfonos: </div>  
+                <div class="text-1xl bold">Teléfonos</div>  
                   <div *ngFor="let p of bar.phone" class="pt-2">{{p}}</div>
                </div>
             
