--- a/src/app/components/drinks/show-filter/show-filter.component.html
+++ b/src/app/components/drinks/show-filter/show-filter.component.html
@@ -7,14 +7,14 @@
           <div  *ngIf="!loading" class="flex flex-wrap md:flex-no-wrap sm:flex-wrap -mx-2 pb-12 pt-16 px-32 overflow-hidden">
             <div
               *ngFor="let x of drinks"
-              class="w-1/3 px-8 rounded sm:p-8 md:p-8 my-2 overflow-hidden border shadow rounded-lg"
+              class="w-1/3 px-8 rounded sm:p-8 md:p-8 my-2 overflow-hidden  rounded-lg"
             >
               <img
-                class="max-w-xl h-auto"
+                class="w-full object-scale-down cursor-pointer"
                 src="{{ x.pictures }}"
                 alt="Sunset in the mountains"
               />
-              <div class="sm:px-6 sm:pl-16 md:px-6 md:pl-16">
+              <div class="sm:px-6 sm:pl-0 md:px-6 md:pl-0">
                 <div
                   class="bg-white rounded-full px-3 py-1  font-semibold text-black text-xl mr-2"
                 >
