--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -10,12 +10,12 @@
                 class="w-1/3 px-8 rounded sm:p-8 md:p-8 my-2 overflow-hidden"
               >
                 <img
-                  class="max-w-xl h-auto cursor-pointer"
+                  class="w-full object-scale-down cursor-pointer"
                   src="{{ x.main_image }}"
                   alt="Sunset in the mountains"
                   (click)="detail(x._id)"
                 />
-                <div class="sm:px-6 sm:pl-16 md:px-6 md:pl-16">
+                <div class="sm:px-6 sm:pl-0 md:px-6 md:pl-0">
                   <div
                     class="bg-white rounded-full px-3 py-1 text-sm font-semibold text-black text-xl mr-2 hover: text-black"
                     (click)="detail(x._id)"
