--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,6 @@
+
 <div
-  class="h-25 flex items-center bg-gray-200 w-full bottom-0"
+  class="h-25 flex items-center bg-gray-200 absolute w-full bottom-0 transition duration-700"
 >
   <div class="flex-initial pr-2 pl-2 sm:pl-32 sm:pr-20 md:pl-32 md:pr-20 ">
     <img src="assets/images/Drinkly-1.png" alt="drinkly" class="h-20 sm:h-32 md:h-32 w-auto"/>
@@ -10,22 +11,22 @@
     <p>Blah blah</p>
     <p>Caracas, Venezuela</p>
   </div>
+</div>
 
-  <div class="flex flex-row space-x-10 pr-8 sm:pr-40 md:pr-40 pl-8 h-8 sm:h-12 md:h-12">
-    <img
-      src="assets/images/instagram 1.png"
-      alt="insta"
-      class="h-full cursor-pointer"
-    />
-    <img
-      src="assets/images/instagram 1.png"
-      alt="insta"
-      class="h-full cursor-pointer"
-    />
-    <img
-      src="assets/images/instagram 1.png"
-      alt="insta"
-      class="h-full cursor-pointer"
-    />
-  </div>
+<div class="flex flex-row space-x-10 pr-24 mb-10 h-12 absolute bottom-0 right-0">
+  <img
+    src="assets/images/instagram 1.png"
+    alt="insta"
+    class="h-full cursor-pointer"
+  />
+  <img
+    src="assets/images/instagram 1.png"
+    alt="insta"
+    class="h-full cursor-pointer"
+  />
+  <img
+    src="assets/images/instagram 1.png"
+    alt="insta"
+    class="h-full cursor-pointer"
+  />
 </div>
