--- a/src/app/components/admin/ad/add-ad/add-ad.component.html
+++ b/src/app/components/admin/ad/add-ad/add-ad.component.html
@@ -1,9 +1,9 @@
-<div class="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-    <div class="w-full">
-      <app-header></app-header>
-      <div class="w-full">
+
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
         <div
           class="h-20 w-full flex justify-center items-center"
           style="font-family: 'Open Sans', sans-serif;"
@@ -136,11 +136,5 @@
             </div>
           </form>
         </div>
-
-
+        <app-footer></app-footer>
       </div>
-    </div>
-  </div>
-</div>
-
-<app-footer></app-footer>
