--- a/src/app/components/admin/ad/list-ad/list-ad.component.html
+++ b/src/app/components/admin/ad/list-ad/list-ad.component.html
@@ -1,12 +1,8 @@
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
 
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
 
-
-<div class="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-    <div class="w-full">
-      <app-header></app-header>
-      <div class="w-full">
+  <app-admin-header></app-admin-header>
         
         <div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
           <div>
@@ -75,9 +71,5 @@
           </div>
         </div>
 
+        <app-footer></app-footer>
       </div>
-    </div>
-  </div>
-</div>
-
-<app-footer></app-footer>
