--- a/src/app/components/admin/bar/add-bar/add-bar.component.html
+++ b/src/app/components/admin/bar/add-bar/add-bar.component.html
@@ -4,10 +4,9 @@
   }
 </style>
 
-<div class="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-    <div class="w-full">
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
       <app-admin-header></app-admin-header>
       <div *ngIf="!loading">
         <div
@@ -665,7 +664,5 @@
           </form>
         </div>
       </div>
-    </div>
+        <app-footer></app-footer>
   </div>
-</div>
-<app-footer></app-footer>
