--- a/src/app/components/admin/bar/edit-bar/edit-bar.component.html
+++ b/src/app/components/admin/bar/edit-bar/edit-bar.component.html
@@ -3,12 +3,12 @@
     display: block !important;
 }
 </style>
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
 
-<div class="flex w-full">
-    <app-navbar></app-navbar>
-    <div class="pl-64 w-full">
-        <div class="w-full">
-            <app-admin-header></app-admin-header>
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
+
             <div *ngIf="!loading">
                 <div class="h-20 w-full flex justify-center items-center" style="font-family: 'Open Sans', sans-serif;">
                 <div><h2 class="text-4xl">EDITA UN BAR</h2></div>
@@ -380,7 +380,5 @@
                     </form>
                 </div>
             </div>
-        </div>
+            <app-footer></app-footer>
     </div>
-</div>
-<app-footer></app-footer>
