--- a/src/app/components/admin/game/edit-game/edit-game.component.html
+++ b/src/app/components/admin/game/edit-game/edit-game.component.html
@@ -1,10 +1,8 @@
-<div class="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-    <div class="w-full">
-      <app-admin-header></app-admin-header>
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
 
-      <div>
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
         <div
           *ngIf="!loading"
           class="h-20 w-full flex justify-center items-center"
@@ -215,9 +213,5 @@
             </div>
           </form>
         </div>
+        <app-footer></app-footer>
       </div>
-    </div>
-  </div>
-</div>
-
-<app-footer></app-footer>
