--- a/src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.html
+++ b/src/app/components/admin/ingredient/add-ingredient/add-ingredient.component.html
@@ -1,9 +1,8 @@
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
 
-<div class ="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-    <div class="w-full">
-      <app-admin-header></app-admin-header>
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
       <div
         class="h-20 w-full flex justify-center items-center"
         style="font-family: 'Open Sans', sans-serif;"
@@ -178,8 +177,5 @@
           </div>
         </form>
       </div>
+      <app-footer></app-footer>
     </div>
-  </div>
-</div>
-
-<app-footer></app-footer>
