--- a/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
+++ b/src/app/components/admin/ingredient/edit-ingredient/edit-ingredient.component.html
@@ -1,8 +1,8 @@
-<div class ="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-    <div class="w-full">
-      <app-admin-header></app-admin-header>
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
 
       <div *ngIf="!loading">
         <div
@@ -175,8 +175,5 @@
           </form>
         </div>
       </div>
+      <app-footer></app-footer>
     </div>
-  </div>
-</div>
-
-<app-footer></app-footer>
