--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -1,10 +1,9 @@
 
-<div class="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-    <div class="w-full">
-      <app-header [hasSearchBar]="true" [searchBarContent]="'trago'"></app-header>
-      <div class="w-full">
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
         <div class="pt-12 pb-12 flex justify-center">
           <button
                   (click)="goToFilter()"
@@ -38,9 +37,5 @@
               </div>
             </div>
           </div>
-      </div>
+      <app-footer></app-footer>
     </div>
-  </div>
-</div>
-
-<app-footer></app-footer>
