--- a/src/app/components/drinks/filter-parent/filter-parent.component.html
+++ b/src/app/components/drinks/filter-parent/filter-parent.component.html
@@ -1,10 +1,9 @@
 
-<div class="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-    <div class="w-full">
-      <app-header></app-header>
-      <div class="w-full">
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
         
                     <div
               class="w-full flex flex-col items-center mt-10 md:mt-24 "
@@ -113,11 +112,8 @@
             </div>
 
 
-      </div>
-    </div>
-  </div>
-</div>
-<app-footer></app-footer>
+            <app-footer></app-footer>
+          </div>
 
 
 
