--- a/src/app/components/juegos/juegos.component.html
+++ b/src/app/components/juegos/juegos.component.html
@@ -1,9 +1,8 @@
-<div class="flex w-full">
-    <app-navbar></app-navbar>
-    <div class="pl-64 w-full">
-        <div class="w-full">
-            <app-header></app-header>
-            <div class="w-full">
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
                 <label class="flex justify-center pt-8 sm:px-32 md:px-40 text-5xl">JUEGOS</label>
                 <div class="flex justify-around py-8 sm:px-32 md:px-40">
                     <div (click)="tridentisOpen=!tridentisOpen" (click)="chupisisOpen=false" (click)="vorisOpen=false"  class="">
@@ -83,9 +82,5 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 <app-footer></app-footer>
+</div>
