--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,9 +1,8 @@
-<div class="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-      <div class="w-full">
-          <app-header></app-header>
-          <div class="w-full">
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
             <div class="flex flex-wrap md:flex-no-wrap sm:flex-wrap -mx-2 pb-12 pt-16 px-32 overflow-hidden">
               <div
                 *ngFor="let x of barOrDrink"
@@ -30,10 +29,8 @@
                 </div>
               </div>
             </div>
-          </div>
-      </div>
-  </div>
-</div>
+
 <app-footer></app-footer>
+</div>
 
 
