--- a/src/app/components/profile-page/edit-user/edit-user.component.html
+++ b/src/app/components/profile-page/edit-user/edit-user.component.html
@@ -1,9 +1,8 @@
-<div class="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-      <div class="w-full">
-          <app-admin-header></app-admin-header>
-          <div class="w-full">
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
             <div
             class="h-20 w-full flex justify-center items-center pt-16"
             style="font-family: 'Open Sans', sans-serif;"
@@ -314,12 +313,8 @@
                   <span class="block sm:inline">Contraseña incorrecta.</span>
                 </div>
           </div>
-
-          </div>
-      </div>
-  </div>
-</div>
 <app-footer></app-footer>
+</div>
  
  
  
