--- a/src/app/components/profile-page/profile/profile.component.html
+++ b/src/app/components/profile-page/profile/profile.component.html
@@ -1,9 +1,8 @@
-<div class="flex w-full">
-  <app-navbar></app-navbar>
-  <div class="pl-64 w-full">
-      <div class="w-full">
-          <app-header></app-header>
-          <div class="w-full">
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
             <div *ngIf="!userLoading">
               <div *ngIf="user" class="p-40">
                 <h3 class="text-4xl">Bienvenido/a, {{ user.f_name }}!</h3>
@@ -23,11 +22,8 @@
                 </div>
               </div>
             </div>
-          </div>
-      </div>
-  </div>
-</div>
 <app-footer></app-footer>
+</div>
 
 
 
