--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,9 +1,8 @@
-<div class="flex w-full">
-    <app-navbar></app-navbar>
-    <div class="pl-64 w-full">
-        <div class="w-full">
-            <app-header></app-header>
-            <div class="w-full">
+<app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+
+  <app-admin-header></app-admin-header>
                 <div>
                     <div *ngIf="!loading" style="max-width: 90%"
                     class="my-6 p-3 pb-6 mt-12 bg-cover  m-auto self-center  shadow">
@@ -45,8 +44,5 @@
                 <div>
 
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
 <app-footer></app-footer>
+</div>
